add shop optimize mobile

--- a/src/index.html
+++ b/src/index.html
@@ -61,9 +61,9 @@
             />
           </li>
           <div class="overlay-content">
-            <a class="" href="my-subpage/cafe.html"></a>
-            <a class="" href="my-subpage/origin.html"></a>
-            <a class="" href="my-subpage/shop.html"></a>
+            <a class="" href="#">das Cafe</a>
+            <a class="" href="#">Herkunft</a>
+            <a class="" href="#">Shop</a>
           </div>
         </ul>
       </div>
@@ -167,27 +167,28 @@
               <p class="description__grey u-margin-bottom-small">
                 6,90€ – 26,90€
               </p>
-
-              <div class="col-1-of-8 u-margin-bottom-big">
-                <img
-                  src="icn/coffeebones.svg"
-                  alt="Icon Coffeebones"
-                  class="icon__explore icon_filter--white"
-                />
-              </div>
-              <div class="col-1-of-8">
-                <img
-                  src="icn/frenchpress.svg"
-                  alt="Icon Frenchpress"
-                  class="icon__explore icon_filter--white"
-                />
-              </div>
-              <div class="col-1-of-8">
-                <img
-                  src="icn/handcrafted.svg"
-                  alt="Icon Handcrafted"
-                  class="icon__explore icon_filter--white"
-                />
+              <div class="row__gallery">
+                <div class="col-1-of-8 u-margin-bottom-big">
+                  <img
+                    src="icn/coffeebones.svg"
+                    alt="Icon Coffeebones"
+                    class="icon__explore icon_filter--white"
+                  />
+                </div>
+                <div class="col-1-of-8">
+                  <img
+                    src="icn/frenchpress.svg"
+                    alt="Icon Frenchpress"
+                    class="icon__explore icon_filter--white"
+                  />
+                </div>
+                <div class="col-1-of-8">
+                  <img
+                    src="icn/handcrafted.svg"
+                    alt="Icon Handcrafted"
+                    class="icon__explore icon_filter--white"
+                  />
+                </div>
               </div>
             </div>
             <div class="col-1-of-4">
@@ -202,27 +203,28 @@
               <p class="description__grey u-margin-bottom-small">
                 6,90€ – 26,90€
               </p>
-
-              <div class="col-1-of-8 u-margin-bottom-big">
-                <img
-                  src="icn/coffeebones.svg"
-                  alt="Icon Coffeebones"
-                  class="icon__explore icon_filter--white"
-                />
-              </div>
-              <div class="col-1-of-8">
-                <img
-                  src="icn/frenchpress.svg"
-                  alt="Icon Frenchpress"
-                  class="icon__explore icon_filter--white"
-                />
-              </div>
-              <div class="col-1-of-8">
-                <img
-                  src="icn/handcrafted.svg"
-                  alt="Icon Handcrafted"
-                  class="icon__explore icon_filter--white"
-                />
+              <div class="row__gallery">
+                <div class="col-1-of-8 u-margin-bottom-big">
+                  <img
+                    src="icn/coffeebones.svg"
+                    alt="Icon Coffeebones"
+                    class="icon__explore icon_filter--white"
+                  />
+                </div>
+                <div class="col-1-of-8">
+                  <img
+                    src="icn/frenchpress.svg"
+                    alt="Icon Frenchpress"
+                    class="icon__explore icon_filter--white"
+                  />
+                </div>
+                <div class="col-1-of-8">
+                  <img
+                    src="icn/handcrafted.svg"
+                    alt="Icon Handcrafted"
+                    class="icon__explore icon_filter--white"
+                  />
+                </div>
               </div>
             </div>
             <div class="col-1-of-4">
@@ -237,27 +239,28 @@
               <p class="description__grey u-margin-bottom-small">
                 6,90€ – 26,90€
               </p>
-
-              <div class="col-1-of-8 u-margin-bottom-big">
-                <img
-                  src="icn/coffeebones.svg"
-                  alt="Icon Coffeebones"
-                  class="icon__explore icon_filter--white"
-                />
-              </div>
-              <div class="col-1-of-8">
-                <img
-                  src="icn/frenchpress.svg"
-                  alt="Icon Frenchpress"
-                  class="icon__explore icon_filter--white"
-                />
-              </div>
-              <div class="col-1-of-8">
-                <img
-                  src="icn/handcrafted.svg"
-                  alt="Icon Handcrafted"
-                  class="icon__explore icon_filter--white"
-                />
+              <div class="row__gallery">
+                <div class="col-1-of-8 u-margin-bottom-big">
+                  <img
+                    src="icn/coffeebones.svg"
+                    alt="Icon Coffeebones"
+                    class="icon__explore icon_filter--white"
+                  />
+                </div>
+                <div class="col-1-of-8">
+                  <img
+                    src="icn/frenchpress.svg"
+                    alt="Icon Frenchpress"
+                    class="icon__explore icon_filter--white"
+                  />
+                </div>
+                <div class="col-1-of-8">
+                  <img
+                    src="icn/handcrafted.svg"
+                    alt="Icon Handcrafted"
+                    class="icon__explore icon_filter--white"
+                  />
+                </div>
               </div>
             </div>
             <div class="col-1-of-4">
@@ -272,27 +275,28 @@
               <p class="description__grey u-margin-bottom-small">
                 6,90€ – 26,90€
               </p>
-
-              <div class="col-1-of-8">
-                <img
-                  src="icn/coffeebones.svg"
-                  alt="Icon Coffeebones"
-                  class="icon__explore icon_filter--white"
-                />
-              </div>
-              <div class="col-1-of-8">
-                <img
-                  src="icn/frenchpress.svg"
-                  alt="Icon Frenchpress"
-                  class="icon__explore icon_filter--white"
-                />
-              </div>
-              <div class="col-1-of-8">
-                <img
-                  src="icn/handcrafted.svg"
-                  alt="Icon Handcrafted"
-                  class="icon__explore icon_filter--white"
-                />
+              <div class="row__gallery">
+                <div class="col-1-of-8">
+                  <img
+                    src="icn/coffeebones.svg"
+                    alt="Icon Coffeebones"
+                    class="icon__explore icon_filter--white"
+                  />
+                </div>
+                <div class="col-1-of-8">
+                  <img
+                    src="icn/frenchpress.svg"
+                    alt="Icon Frenchpress"
+                    class="icon__explore icon_filter--white"
+                  />
+                </div>
+                <div class="col-1-of-8">
+                  <img
+                    src="icn/handcrafted.svg"
+                    alt="Icon Handcrafted"
+                    class="icon__explore icon_filter--white"
+                  />
+                </div>
               </div>
             </div>
           </div>
