optimize contact form

--- a/src/my-subpage/contact.html
+++ b/src/my-subpage/contact.html
@@ -109,7 +109,7 @@
                 </div>
 
                 <div class="form__group u-margin-bottom-big">
-                  <label for="email" class="form__label u-margin-bottom-small"
+                    <label for="email" class="form__label u-margin-bottom-small"
                     >Telefonnummer</label
                   >
                   <input
@@ -139,15 +139,13 @@
                 ><br /><br />
 -->
 
-                <div class="form__group">
-                  <label for="email" class="form__label">Deine Nachricht</label>
-                  <input
-                    type="text"
-                    class="form__input u-margin-bottom-medium"
-                    placeholder="Was hast du auf dem Herzen"
-                    id="message"
-                  />
-                </div>
+              <div class="form__group">
+          <label for="email" class="form__label u-margin-bottom-medium">Deine Nachricht</label>
+  <p>
+    <strong>Solution with span:</strong>
+    <span class="form__input textarea u-margin-bottom-medium" role="textbox" contenteditable></span>
+  </p>
+</div>
 
                 <div class="form__group u-margin-bottom-big">
                   <div class="form__checkbox u-margin-bottom-big">
