add cart to menu

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,14 @@
           <li class="navD-menu">
             <a class="link-underline" href="my-subpage/shop.html">Shop</a>
           </li>
+          <li class="navD-menu">
+            <a href="#">
+              <img
+                src="icn/cart.svg"
+                alt="Warenkorb"
+                class="header__cart icon_filter--white"
+            /></a>
+          </li>
         </ul>
       </div>
     </nav>
