--- a/src/my-subpage/contact.html
+++ b/src/my-subpage/contact.html
@@ -38,6 +38,14 @@
           <li class="navD-menu">
             <a class="linkb-underline" href="../my-subpage/shop.html">Shop</a>
           </li>
+          <li class="navD-menu">
+            <a href="#">
+              <img
+                src="../icn/cart.svg"
+                alt="Warenkorb"
+                class="header__cart icon_filter--black"
+            /></a>
+          </li>
         </ul>
       </div>
     </nav>
