--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
         </ul>
       </div>
     </nav>
-    <div class="navM overlay">
+    <div class="navM">
       <div class="navM-overall">
         <div class="header__logo-box">
           <a href="#">
@@ -62,20 +62,25 @@
         </div>
         <ul class="navM-line">
           <li class="navM-menu">
-            <img
-              src="icn/Burger Menu.svg"
-              alt="hamburger menu"
-              class="hamburger-menu icon_filter--white"
-            />
+            <button class="menu-btn">
+              <img
+                src="icn/Burger Menu.svg"
+                alt="hamburger menu"
+                class="hamburger-menu icon_filter--white"
+              />
+            </button>
           </li>
-          <div class="overlay-content">
-            <a class="" href="#">das Cafe</a>
-            <a class="" href="#">Herkunft</a>
-            <a class="" href="#">Shop</a>
-          </div>
         </ul>
       </div>
     </div>
+    <nav class="nav-mobile">
+      <button class="menu-close-button">Close Menu</button>
+      <ul>
+        <li><a class="" href="#">das Cafe</a></li>
+        <li><a class="" href="#">Herkunft</a></li>
+        <li><a class="" href="#">Shop</a></li>
+      </ul>
+    </nav>
     <header class="header">
       <div class="header__text-box">
         <h1 class="heading-primary">
@@ -463,7 +468,9 @@
                   <a href="my-subpage/imprint.html" class="link__footer--white"
                     >Impressum</a
                   >
-                  <a href="#" class="link__footer--white">Datenschutz</a>
+                  <a href="my-subpage/test.html" class="link__footer--white"
+                    >Datenschutz</a
+                  >
                   <a href="my-subpage/contact.html" class="link__footer--white"
                     >Kontakt</a
                   >
@@ -475,6 +482,6 @@
       </section>
     </main>
 
-    <script src="js/navbar.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
