finish mobile nav

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
     <div class="navM">
       <div class="navM-overall">
         <div class="header__logo-box">
-          <a href="#">
+          <a href="index.html">
             <img
               src="logo/Logo.svg"
               alt="Logo"
@@ -74,11 +74,17 @@
       </div>
     </div>
     <nav class="nav-mobile">
-      <button class="menu-close-button">Close Menu</button>
+      <button class="menu-close-button">
+        <img
+          src="icn/BurgerMenu-closed.svg"
+          alt="close hamburger menu"
+          class="close-menu icon_filter--white"
+        />
+      </button>
       <ul>
-        <li><a class="" href="#">das Cafe</a></li>
-        <li><a class="" href="#">Herkunft</a></li>
-        <li><a class="" href="#">Shop</a></li>
+        <li><a href="my-subpage/cafe.html">das Cafe</a></li>
+        <li><a href="my-subpage/origin.html">Herkunft</a></li>
+        <li><a href="my-subpage/shop.html">Shop</a></li>
       </ul>
     </nav>
     <header class="header">
@@ -468,7 +474,7 @@
                   <a href="my-subpage/imprint.html" class="link__footer--white"
                     >Impressum</a
                   >
-                  <a href="my-subpage/test.html" class="link__footer--white"
+                  <a href="my-subpage/imprint.html" class="link__footer--white"
                     >Datenschutz</a
                   >
                   <a href="my-subpage/contact.html" class="link__footer--white"
