--- a/src/my-subpage/imprint.html
+++ b/src/my-subpage/imprint.html
@@ -25,17 +25,13 @@
         </div>
         <ul class="navD-line">
           <li class="navD-menu">
-            <a class="linkb-underline" href="../my-subpage/cafe.html"
-              >das Café</a
-            >
+            <a class="linkb-underline" href="cafe.html">das Café</a>
           </li>
           <li class="navD-menu">
-            <a class="linkb-underline" href="../my-subpage/origin.html"
-              >Herkunft</a
-            >
+            <a class="linkb-underline" href="origin.html">Herkunft</a>
           </li>
           <li class="navD-menu">
-            <a class="linkb-underline" href="../my-subpage/shop.html">Shop</a>
+            <a class="linkb-underline" href="shop.html">Shop</a>
           </li>
           <li class="navD-menu">
             <a href="#">
@@ -48,7 +44,7 @@
         </ul>
       </div>
     </nav>
-    <div class="navM overlay">
+    <div class="navM">
       <div class="navM-overall">
         <div class="header__logo-box">
           <a href="../index.html">
@@ -60,21 +56,31 @@
         </div>
         <ul class="navM-line">
           <li class="navM-menu">
-            <img
-              src="../icn/Burger Menu.svg"
-              alt="hamburger menu"
-              class="hamburger-menu icon_filter--black"
-            />
+            <button class="menu-btn">
+              <img
+                src="../icn/Burger Menu.svg"
+                alt="hamburger menu"
+                class="hamburger-menu icon_filter--black"
+              />
+            </button>
           </li>
-          <div class="overlay-content">
-            <a class="" href="#">das Cafe</a>
-            <a class="" href="#">Herkunft</a>
-            <a class="" href="#">Shop</a>
-          </div>
         </ul>
       </div>
     </div>
-
+    <nav class="nav-mobile">
+      <button class="menu-close-button">
+        <img
+          src="../icn/BurgerMenu-closed.svg"
+          alt="close hamburger menu"
+          class="close-menu icon_filter--white"
+        />
+      </button>
+      <ul>
+        <li><a href="cafe.html">das Cafe</a></li>
+        <li><a href="origin.html">Herkunft</a></li>
+        <li><a href="shop.html">Shop</a></li>
+      </ul>
+    </nav>
     <main>
       <section class="section-imprint">
         <h2 class="heading-secondary u-margin-bottom-medium">Imprint &</h2>
